fix align svg

--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,8 @@
 
 .store-container {
   line-height:0;
- 
-  width: 50%;
+  margin: 20px;
+  width: 100%;
   
 }
 .stroke {
