--- a/public/whatsapp.css
+++ b/public/whatsapp.css
@@ -19,7 +19,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /*align-items: center;*/
   height: 100vh;
 }
 
